Data sample collected

--- a/finding-falcone/src/app/components/footer/footer.component.html
+++ b/finding-falcone/src/app/components/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+
+<footer fxLayoutAlign="center center">
+  <span class="center-align">Coding Challenge. By Beno solomon</span>
+</footer>
