--- a/finding-falcone/src/app/components/header/header.component.html
+++ b/finding-falcone/src/app/components/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+  <span><img src="./assets/logo-geektrust-hub-green.png" height=45 width="130"></span>
+  <span class="flex-spacer"></span>
+  <div fxLayout="row" fxLayoutAlign="space-around">
+    <div class="nav-link" routerLink="/home" >
+      <span routerLinkActive="linkActive">Home</span>
+    </div>
+    <div class="nav-link" routerLink="/findingFalcone" >
+      <span routerLinkActive="linkActive"> Find Falcone</span>
+    </div>
+  </div>
+</mat-toolbar>
