--- a/finding-falcone/src/app/components/home/home.component.html
+++ b/finding-falcone/src/app/components/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<div fxFlex>
+  <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" class="intro">
+    <div fxLayoutAlign="center center">
+      <img mat-card-avatar src="./assets/king_shan.jpg" alt="King shan">
+    </div>
+    <div>
+      <h1>FINDING FALCONE</h1>
+      <div fxLayout="column">
+        <p>
+          After the recent war with neighbouring planet Falicornia, King Shan has exiled the Queen of Falicornia for 15
+          years.Queen Al Falcone is now in hiding. But if King Shan can find her before the years are up, she will be
+          exiled for another 15 years....
+        </p>
+        <br />
+        <p>
+          King Shan has received intelligence that Al Falcone is in hiding in one of these 6 planets - DonLon, Enchai,
+          Jebing, Sapir, Lerbin & Pingasor. However he has limited resources at his disposal & can send his army to only
+          4 of these planets. Our task is to help King Shan find Al Falcone.
+        </p>
+      </div>
+      <div fxLayoutAlign="center center">
+        <button mat-raised-button routerLink="../findingFalcone">Let's help King Shan</button>
+      </div>
+    </div>
+    <br/>
+  </div>
+</div>
