--- a/finding-falcone/src/styles.scss
+++ b/finding-falcone/src/styles.scss
@@ -2,3 +2,13 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+footer {
+  height: 50px;
+  background-color:grey;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0.5rem;
+}
