--- a/finding-falcone/src/app/components/home/home.component.html
+++ b/finding-falcone/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
         </p>
       </div>
       <div fxLayoutAlign="center center">
-        <button mat-raised-button routerLink="../findingFalcone">Let's help King Shan</button>
+        <button mat-raised-button color="primary" routerLink="../findingFalcone">Let's help King Shan</button>
       </div>
     </div>
     <br/>
