--- a/finding-falcone/src/my-theme.scss
+++ b/finding-falcone/src/my-theme.scss
@@ -2,10 +2,10 @@
 
 @include mat-core();
 
-$my-theme-primary: mat-palette($mat-grey,900,A700);
+$my-theme-primary: mat-palette($mat-blue,900);
 $my-theme-accent:  mat-palette($mat-pink, A200, A100, A400);
 $my-theme-warn:    mat-palette($mat-red);
-$my-app-theme: mat-dark-theme($my-theme-primary, $my-theme-accent, $my-theme-warn);
+$my-app-theme: mat-light-theme($my-theme-primary, $my-theme-accent, $my-theme-warn);
 
 
 @include angular-material-theme($my-app-theme);
